syntax = "proto3";

option go_package = "./pb";

//消息队列
package pb;


message AqDeferFlightOrderCloseReq {
  string sn = 1;
}
message AqDeferFlightOrderCloseResp {
}

message KqPaymentStatusUpdateReq {
  string orderSn = 1;
  int64 payStatus = 2;
}
message KqPaymentStatusUpdateResp {
}

message SendWxMiniSubMessageReq {
  string Openid = 1;
  string TemplateID = 2;
  string Page = 3;
  map<string,string> Data = 4;
}
message SendWxMiniSubMessageResp {
}

//service
service mqueue {
    //------------------------------
    //asynq
    //asynq defer 
    //------------------------------

    //添加航班订单延迟关闭到asynq队列
    rpc aqDeferFlightOrderClose(AqDeferFlightOrderCloseReq)returns(AqDeferFlightOrderCloseResp);


    //------------------------------
    //asynq job
    //------------------------------




    //------------------------------
    //kq
    //------------------------------

    //支付流水状态变更发送到kq
    rpc kqPaymentStatusUpdate(KqPaymentStatusUpdateReq)returns(KqPaymentStatusUpdateResp);

    //发送微信小程序订阅消息
    rpc sendWxMiniSubMessage(SendWxMiniSubMessageReq)returns(SendWxMiniSubMessageResp);
}